--- a/index.html
+++ b/index.html
@@ -1,364 +1,327 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Design Header Fixed + Sections</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Design Header Fixed + Sections</title>
 
-<!-- ✅ أيقونة الموقع -->
-<link rel="icon" href="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg">
+  <!-- إعدادات المتصفح -->
+  <meta name="theme-color" content="#3f5bff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-navbutton-color" content="#3f5bff">
 
-<!-- ✅ إعدادات اللون لجميع المتصفحات -->
-<meta name="theme-color" content="#0c0c0c">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-status-bar" content="#0c0c0c">
-<meta name="msapplication-navbutton-color" content="#0c0c0c">
-<meta name="msapplication-TileColor" content="#0c0c0c">
-<meta name="color-scheme" content="dark light">
-<meta name="application-name" content="Design Website">
-<meta name="mobile-web-app-capable" content="yes">
+  <!-- الأيقونة -->
+  <link rel="icon" href="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg">
 
-<!-- ✅ الخطوط -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Cairo:wght@400;600;700;800&family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- الخطوط -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-<style>
-:root{
---black-header:#111;
---white:#fff;
---gray-border:rgba(255,255,255,0.08);
-}
-body{
-margin:0;
-font-family:"Inter",sans-serif;
-background:#fafafa;
-}
-header{
-position:fixed;
-top:0;
-left:0;
-right:0;
-z-index:100;
-background:var(--black-header);
-color:var(--white);
-border-bottom:1px solid var(--gray-border);
-box-shadow:0 2px 8px rgba(0,0,0,0.2);
-}
-.header-inner{
-display:flex;
-justify-content:space-between;
-align-items:center;
-padding:14px 16px;
-}
-.hamburger{
-background:none;
-border:none;
-cursor:pointer;
-color:white;
-}
-.hamburger svg{
-width:24px;
-height:24px;
-stroke:white;
-stroke-width:2.5;
-fill:none;
-}
-.logo img{
-height:36px;
-display:block;
-object-fit:contain;
-}
-.cta{
-background:rgba(255,255,255,0.1);
-color:white;
-border:none;
-border-radius:12px;
-padding:10px 16px;
-font-weight:600;
-cursor:pointer;
-transition:0.3s ease;
-}
-.cta:hover{
-background:rgba(255,255,255,0.25);
-}
-nav{
-display:flex;
-gap:24px;
-padding:12px 16px;
-border-top:1px solid var(--gray-border);
-font-weight:600;
-font-size:15px;
-background:var(--black-header);
-justify-content:center;
-}
-.hero-normal{
-width:100%;
-background:linear-gradient(180deg,#0c0c0c 0%,#121212 100%);
-display:flex;
-align-items:center;
-justify-content:center;
-text-align:center;
-color:#fff;
-font-family:'Inter',sans-serif;
-padding:120px 20px 90px;
-box-sizing:border-box;
-}
-.hero-normal .content{
-max-width:420px;
-width:100%;
-}
-.hero-normal h1{
-font-size:clamp(40px,6vw,64px);
-font-weight:800;
-line-height:1.15;
-margin-bottom:16px;
-}
-.hero-normal p{
-font-size:clamp(18px,2.3vw,22px);
-color:#cfcfcf;
-margin-bottom:26px;
-line-height:1.6;
-}
-.input-wrapper{
-display:flex;
-justify-content:center;
-width:100%;
-margin-bottom:18px;
-}
-.hero-normal input{
-width:100%;
-max-width:360px;
-padding:14px 16px;
-border-radius:14px;
-border:none;
-outline:none;
-font-size:16px;
-background-color:#fff;
-color:#000;
-text-align:center;
-box-shadow:0 2px 6px rgba(0,0,0,0.25);
-transition:0.2s ease;
-}
-.hero-normal input:focus{
-box-shadow:0 0 0 3px rgba(59,91,255,0.4);
-}
-.hero-normal input::placeholder{
-color:#999;
-}
-.hero-normal button{
-width:100%;
-max-width:360px;
-padding:14px;
-background-color:#3b5bff;
-border:none;
-color:white;
-border-radius:12px;
-font-size:17px;
-font-weight:700;
-cursor:pointer;
-box-shadow:0 6px 14px rgba(59,91,255,0.3);
-transition:0.25s ease;
-margin-bottom:22px;
-}
-.hero-normal button:hover{
-background-color:#2f48cc;
-transform:translateY(-2px);
-}
-.hero-normal .upload{
-display:flex;
-align-items:center;
-justify-content:center;
-gap:8px;
-color:#fff;
-font-weight:600;
-font-size:15px;
-opacity:0.95;
-cursor:pointer;
-transition:opacity 0.2s ease;
-}
-.hero-normal .upload svg{
-width:20px;
-height:20px;
-fill:none;
-stroke:#fff;
-stroke-width:2;
-}
-.hero-normal .upload:hover{
-opacity:1;
-}
-@media(max-width:640px){
-.hero-normal{
-padding:100px 20px 70px;
-}
-.hero-normal input,
-.hero-normal button{
-max-width:90%;
-}
-}
-.hero-full{
-width:100%;
-background:#f5f6f7;
-display:flex;
-align-items:center;
-justify-content:center;
-padding:100px 10vw;
-box-sizing:border-box;
-color:#111;
-font-family:"Cairo",sans-serif;
-}
-.hero-content{
-max-width:850px;
-text-align:start;
-}
-.hero-content .kicker{
-display:inline-block;
-font-size:clamp(14px,1.2vw,16px);
-font-weight:700;
-color:#2e55f2;
-text-transform:uppercase;
-letter-spacing:0.05em;
-margin-bottom:18px;
-}
-.hero-content h1{
-font-size:clamp(36px,5.8vw,78px);
-font-weight:800;
-line-height:1.1;
-color:#111;
-margin-bottom:22px;
-}
-.hero-content p{
-font-size:clamp(16px,1.6vw,22px);
-color:#555;
-line-height:1.8;
-max-width:700px;
-}
-@media(max-width:640px){
-.hero-full{
-padding:80px 6vw;
-text-align:center;
-}
-.hero-content{
-max-width:100%;
-}
-}
-.features-section{
-background-color:#0e0e0e;
-color:#fff;
-text-align:center;
-padding:60px 20px 80px;
-position:relative;
-overflow:hidden;
-font-family:"Tajawal",sans-serif;
-}
-.features-section .section-subtitle{
-color:#8c8cff;
-font-size:16px;
-margin-bottom:10px;
-font-weight:500;
-}
-.features-section .section-title{
-font-size:30px;
-font-weight:700;
-margin-bottom:40px;
-line-height:1.4;
-}
-.features-section .images-wrapper{
-position:relative;
-display:flex;
-justify-content:center;
-align-items:center;
-}
-.features-section .grid-bg{
-position:absolute;
-width:250px;
-height:250px;
-background-image:linear-gradient(#333 1px,transparent 1px),linear-gradient(90deg,#333 1px,transparent 1px);
-background-size:40px 40px;
-opacity:0.4;
-z-index:1;
-top:50%;
-left:50%;
-transform:translate(-50%,-50%);
-}
-.features-section .feature-image{
-width:85%;
-max-width:800px;
-border-radius:16px;
-z-index:2;
-position:relative;
-display:block;
-box-shadow:0 10px 25px rgba(0,0,0,0.4);
-margin-bottom:40px;
-}
-.features-section .text-content{
-text-align:right;
-max-width:800px;
-margin:0 auto;
-line-height:1.9;
-}
-.features-section .text-content h2{
-font-size:32px;
-font-weight:700;
-margin-bottom:20px;
-}
-.features-section .text-content p{
-font-size:18px;
-color:#ddd;
-font-weight:400;
-}
-@media(max-width:480px){
-.logo img{height:30px;}
-nav{gap:16px;font-size:14px;}
-}
-</style>
+  <style>
+    :root{
+      --black-header:#111;
+      --white:#fff;
+      --gray-border:rgba(255,255,255,0.08);
+    }
+
+    body{
+      margin:0;
+      font-family:"Inter",sans-serif;
+      background:#fafafa;
+    }
+
+    /* ✅ الهيدر الثابت */
+    header{
+      position:fixed;
+      top:0;
+      left:0;
+      right:0;
+      z-index:100;
+      background:var(--black-header);
+      color:var(--white);
+      border-bottom:1px solid var(--gray-border);
+      box-shadow:0 2px 8px rgba(0,0,0,0.2);
+    }
+
+    .header-inner{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:14px 16px;
+    }
+
+    .hamburger{
+      background:none;
+      border:none;
+      cursor:pointer;
+      color:white;
+    }
+    .hamburger svg{
+      width:24px;
+      height:24px;
+      stroke:white;
+      stroke-width:2.5;
+      fill:none;
+    }
+
+    .logo img{
+      height:36px;
+      display:block;
+      object-fit:contain;
+    }
+
+    .cta{
+      background:rgba(255,255,255,0.1);
+      color:white;
+      border:none;
+      border-radius:12px;
+      padding:10px 16px;
+      font-weight:600;
+      cursor:pointer;
+    }
+
+    nav{
+      display:flex;
+      gap:24px;
+      padding:12px 16px;
+      border-top:1px solid var(--gray-border);
+      font-weight:600;
+      font-size:15px;
+      background:var(--black-header);
+    }
+
+    /* القسم الأول */
+    .hero-normal {
+      width: 100%;
+      min-height: 100vh;
+      background: linear-gradient(180deg, #0c0c0c 0%, #121212 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: #fff;
+      font-family: 'Inter', sans-serif;
+      padding: 80px 20px;
+      box-sizing: border-box;
+      overflow: hidden;
+      padding-top: 120px; /* ترك مساحة للهيدر */
+    }
+
+    .hero-normal .content {
+      max-width: 420px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    .hero-normal h1 {
+      font-size: 2.8rem;
+      font-weight: 800;
+      margin-bottom: 0.8rem;
+      line-height: 1.3;
+    }
+
+    .hero-normal p {
+      font-size: 1.1rem;
+      color: #c8c8c8;
+      margin-bottom: 2.5rem;
+      line-height: 1.6;
+    }
+
+    .hero-normal input {
+      width: 100%;
+      max-width: 360px;
+      padding: 15px;
+      border-radius: 14px;
+      border: none;
+      outline: none;
+      font-size: 1rem;
+      background-color: #fff;
+      color: #000;
+      text-align: center;
+      margin-bottom: 1.4rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.25);
+    }
+
+    .hero-normal input::placeholder {
+      color: #aaa;
+    }
+
+    .hero-normal button {
+      width: 100%;
+      max-width: 360px;
+      padding: 15px;
+      background-color: #3b5bff;
+      border: none;
+      color: white;
+      border-radius: 14px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 6px 14px rgba(59, 91, 255, 0.3);
+      transition: 0.25s ease;
+    }
+
+    .hero-normal button:hover {
+      background-color: #2f48cc;
+      transform: translateY(-3px);
+    }
+
+    .hero-normal .upload {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 1.6rem;
+      color: #fff;
+      font-weight: 600;
+      font-size: 1rem;
+      opacity: 0.9;
+      cursor: pointer;
+      transition: opacity 0.2s ease;
+    }
+
+    .hero-normal .upload:hover {
+      opacity: 1;
+    }
+
+    .hero-normal .upload svg {
+      width: 20px;
+      height: 20px;
+      fill: none;
+      stroke: #fff;
+      stroke-width: 2;
+    }
+
+    .hero-normal .arrow {
+      margin-top: 2.5rem;
+      animation: bounce 2s infinite;
+      opacity: 0.9;
+    }
+
+    .hero-normal .arrow svg {
+      width: 34px;
+      height: 34px;
+      fill: none;
+      stroke: white;
+      stroke-width: 2.5;
+    }
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+      40% {transform: translateY(10px);}
+      60% {transform: translateY(5px);}
+    }
+
+    /* ✅ القسم الثالث (الجديد) */
+    .hero-full {
+      width: 100vw;
+      min-height: 100vh;
+      background: #f5f6f7;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 10vw;
+      box-sizing: border-box;
+      font-family: "Cairo", sans-serif;
+    }
+
+    .hero-content {
+      max-width: 850px;
+      text-align: start;
+    }
+
+    .hero-content .kicker {
+      display: inline-block;
+      font-size: clamp(14px, 1.2vw, 16px);
+      font-weight: 700;
+      color: #2e55f2;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      margin-bottom: 18px;
+    }
+
+    .hero-content h1 {
+      font-size: clamp(36px, 5.8vw, 78px);
+      font-weight: 800;
+      line-height: 1.1;
+      color: #111;
+      margin-bottom: 22px;
+    }
+
+    .hero-content p {
+      font-size: clamp(16px, 1.6vw, 22px);
+      color: #555;
+      line-height: 1.8;
+      max-width: 700px;
+    }
+
+    @media (max-width: 640px) {
+      .hero-full {
+        padding: 0 6vw;
+        text-align: center;
+      }
+      .hero-content {
+        max-width: 100%;
+      }
+      .hero-content h1 {
+        line-height: 1.2;
+      }
+    }
+  </style>
 </head>
 <body>
-<header>
-<div class="header-inner">
-<button class="hamburger" aria-label="menu">
-<svg viewBox="0 0 24 24"><path d="M4 7h16M4 12h16M4 17h16" stroke-linecap="round"/></svg>
-</button>
-<a href="#" class="logo"><img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo"></a>
-<button class="cta">Connectez-vous</button>
-</div>
-<nav>
-<span>Logos</span><span>Cartes de visite</span><span>Sites Web</span><span>AI</span>
-</nav>
-</header>
-<section class="hero-normal">
-<div class="content">
-<h1>Créateur de<br>site Web</h1>
-<p>Créez un magnifique site Web en quelques secondes</p>
-<div class="input-wrapper">
-<input type="text" placeholder="Saisir le nom de votre entreprise">
-</div>
-<button>Commencer Maintenant</button>
-<div class="upload">
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 16V8m0 0l-4 4m4-4l4 4M4 20h16"/></svg>
-Téléchargez Votre Logo
-</div>
-</div>
-</section>
-<section class="hero-full">
-<div class="hero-content">
-<span class="kicker">نَمَاذِجُ التَّصْمِيم</span>
-<h1>أنشئ موقعك الإلكتروني الاحترافي<br>في لحظات. ابدأ مجانًا الآن!</h1>
-<p>هل ترغب في موقع إلكتروني لشركتك، لمتجرك، أو لمشروعك الناشئ؟<br>أياً كانت فكرتك، نحن نساعدك على تصميم وتطوير موقع أنيق وجاهز للعمل في ثوانٍ.</p>
-</div>
-</section>
-<section class="features-section" dir="rtl">
-<div class="container">
-<h5 class="section-subtitle">فوائد</h5>
-<h2 class="section-title">أكثر بكثير من مجرد منشئ موقع ويب</h2>
-<div class="images-wrapper">
-<div class="grid-bg"></div>
-<img src="https://i.postimg.cc/FK87HV5C/features-website-builder-2x-fr-fr-1.webp" alt="مميزات منشئ المواقع" class="feature-image">
-</div>
-<div class="text-content">
-<h2>أخبر قصتك بموقع ويب مخصص</h2>
-<p>عزّز هوية علامتك التجارية بتصميم موقع إلكتروني مُخصّص. يساعدك الموقع الإلكتروني عالي الجودة على بناء الوعي بعلامتك التجارية وتوسيع شبكة معارفك. لا تقتصر على معلومات واقعية مثل اسمك أو بيانات الاتصال؛ بل عبّر عن قصتك من خلال إنشاء موقع إلكتروني مؤثر باستخدام منشئ مواقع الويب من Design.com.</p>
-</div>
-</div>
-</section>
+
+  <!-- ✅ الهيدر -->
+  <header>
+    <div class="header-inner">
+      <button class="hamburger" aria-label="menu">
+        <svg viewBox="0 0 24 24"><path d="M4 7h16M4 12h16M4 17h16" stroke-linecap="round" /></svg>
+      </button>
+      <a href="#" class="logo"><img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo"></a>
+      <button class="cta">Connectez-vous</button>
+    </div>
+
+    <nav>
+      <span>Logos</span>
+      <span>Cartes de visite</span>
+      <span>Sites Web</span>
+      <span>AI</span>
+    </nav>
+  </header>
+
+  <!-- ✅ القسم الأول -->
+  <section class="hero-normal">
+    <div class="content">
+      <h1>Créateur de<br>site Web</h1>
+      <p>Créez un magnifique site Web en quelques secondes</p>
+      <input type="text" placeholder="Saisir le nom de votre entreprise">
+      <button>Commencer Maintenant</button>
+      <div class="upload">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M12 16V8m0 0l-4 4m4-4l4 4M4 20h16" />
+        </svg>
+        Téléchargez Votre Logo
+      </div>
+      <div class="arrow">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M6 9l6 6 6-6" />
+        </svg>
+      </div>
+    </div>
+  </section>
+
+  <!-- ✅ القسم الثالث الجديد -->
+  <section class="hero-full">
+    <div class="hero-content">
+      <span class="kicker">نَمَاذِجُ التَّصْمِيم</span>
+      <h1>أنشئ موقعك الإلكتروني الاحترافي<br>في لحظات. ابدأ مجانًا الآن!</h1>
+      <p>
+        هل ترغب في موقع إلكتروني لشركتك، لمتجرك، أو لمشروعك الناشئ؟<br>
+        أياً كانت فكرتك، نحن نساعدك على تصميم وتطوير موقع أنيق وجاهز للعمل في ثوانٍ.
+      </p>
+    </div>
+  </section>
+
 </body>
 </html>
