--- a/index.html
+++ b/index.html
@@ -15,33 +15,38 @@
   <link rel="icon" href="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg">
 
   <!-- الخطوط -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --black-header: #111;
-      --white: #fff;
-      --gray-border: rgba(255,255,255,0.08);
+      --main-blue: #3b5bff;
+      --dark-bg: #0c0c0c;
+      --text-light: #fff;
+      --header-black: #111;
+      --gray-border: rgba(255, 255, 255, 0.08);
     }
+
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      margin: 0;
       font-family: "Inter", sans-serif;
       background: #fafafa;
+      color: #111;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
     }
 
-    /* ✅ الهيدر الثابت */
+    h1, h2, h3, h4, h5, h6 { font-family: "Cairo", sans-serif; }
+
+    /* ---------------------- الهيدر ---------------------- */
     header {
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
+      top: 0; left: 0; right: 0;
       z-index: 100;
-      background: var(--black-header);
-      color: var(--white);
+      background: var(--header-black);
+      color: var(--text-light);
       border-bottom: 1px solid var(--gray-border);
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.25);
     }
 
     .header-inner {
@@ -51,25 +56,22 @@
       padding: 14px 16px;
     }
 
+    .logo img { height: 36px; display: block; object-fit: contain; }
+
     .hamburger {
-      background: none;
-      border: none;
-      cursor: pointer;
-      color: white;
+      background: none; border: none; cursor: pointer; color: white;
     }
 
-    .hamburger svg {
-      width: 24px;
-      height: 24px;
-      stroke: white;
-      stroke-width: 2.5;
-      fill: none;
-    }
+    .hamburger svg { width: 24px; height: 24px; stroke: white; stroke-width: 2.5; fill: none; }
 
-    .logo img {
-      height: 36px;
-      display: block;
-      object-fit: contain;
+    nav {
+      display: flex;
+      gap: 24px;
+      padding: 12px 16px;
+      font-weight: 600;
+      font-size: 15px;
+      border-top: 1px solid var(--gray-border);
+      background: var(--header-black);
     }
 
     .cta {
@@ -80,39 +82,21 @@
       padding: 10px 16px;
       font-weight: 600;
       cursor: pointer;
-      transition: 0.3s;
+      transition: background 0.3s;
     }
 
-    .cta:hover {
-      background: rgba(255,255,255,0.2);
-    }
+    .cta:hover { background: rgba(255,255,255,0.25); }
 
-    nav {
-      display: flex;
-      gap: 24px;
-      padding: 12px 16px;
-      border-top: 1px solid var(--gray-border);
-      font-weight: 600;
-      font-size: 15px;
-      background: var(--black-header);
-    }
-
-    /* ==========================
-       ✅ القسم الثاني (محدث بالكامل)
-    ========================== */
+    /* ---------------------- القسم الأول ---------------------- */
     .hero-normal {
-      width: 100%;
-      background: linear-gradient(180deg, #0c0c0c 0%, #121212 100%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
+      min-height: 100vh;
+      background: linear-gradient(180deg, var(--dark-bg) 0%, #121212 100%);
       color: #fff;
-      font-family: 'Inter', sans-serif;
-      padding: 110px 20px 90px;
-      box-sizing: border-box;
-      position: relative;
-      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 120px 20px 90px;
     }
 
     .hero-normal .content {
@@ -137,15 +121,9 @@
       font-size: clamp(18px, 2.3vw, 22px);
       color: #cfcfcf;
       margin-bottom: 26px;
-      line-height: 1.6;
     }
 
-    .input-wrapper {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      margin-bottom: 18px;
-    }
+    .input-wrapper { margin-bottom: 18px; }
 
     .hero-normal input {
       width: 100%;
@@ -155,118 +133,71 @@
       border: none;
       outline: none;
       font-size: 16px;
-      background-color: #fff;
-      color: #000;
       text-align: center;
+      background: #fff;
+      color: #000;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
-      transition: 0.2s ease;
+      transition: box-shadow 0.3s;
     }
 
-    .hero-normal input:focus {
-      box-shadow: 0 0 0 3px rgba(59, 91, 255, 0.4);
-    }
-
-    .hero-normal input::placeholder {
-      color: #999;
-    }
+    .hero-normal input:focus { box-shadow: 0 0 0 3px rgba(59,91,255,0.4); }
 
     .hero-normal button {
       width: 100%;
       max-width: 360px;
       padding: 14px;
-      background-color: #3b5bff;
       border: none;
-      color: white;
       border-radius: 12px;
+      background: var(--main-blue);
+      color: white;
       font-size: 17px;
       font-weight: 700;
       cursor: pointer;
-      box-shadow: 0 6px 14px rgba(59, 91, 255, 0.3);
-      transition: 0.25s ease;
+      box-shadow: 0 6px 14px rgba(59,91,255,0.3);
+      transition: all 0.25s ease;
       margin-bottom: 22px;
     }
 
-    .hero-normal button:hover {
-      background-color: #2f48cc;
-      transform: translateY(-2px);
+    .hero-normal button:hover { background: #2f48cc; transform: translateY(-2px); }
+
+    .upload {
+      display: flex; align-items: center; justify-content: center;
+      gap: 8px; color: #fff; font-weight: 600;
+      font-size: 15px; opacity: 0.9; cursor: pointer;
+      transition: opacity 0.25s;
     }
 
-    .hero-normal .upload {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      color: #fff;
-      font-weight: 600;
-      font-size: 15px;
-      opacity: 0.95;
-      cursor: pointer;
-      transition: opacity 0.2s ease;
-    }
+    .upload:hover { opacity: 1; }
 
-    .hero-normal .upload svg {
-      width: 20px;
-      height: 20px;
-      fill: none;
-      stroke: #fff;
-      stroke-width: 2;
-    }
+    .upload svg { width: 20px; height: 20px; stroke: #fff; stroke-width: 2; }
 
-    .hero-normal .upload:hover {
-      opacity: 1;
-    }
-
-    @keyframes shake {
-      0%, 100% { transform: translateX(0); }
-      20%, 60% { transform: translateX(-6px); }
-      40%, 80% { transform: translateX(6px); }
-    }
-
-    @media (max-width: 640px) {
-      .hero-normal {
-        padding: 90px 20px 70px;
-      }
-      .hero-normal input,
-      .hero-normal button {
-        max-width: 90%;
-      }
-    }
-
-    /* ==========================
-       القسم الثالث
-    ========================== */
+    /* ---------------------- القسم الثاني ---------------------- */
     .hero-full {
-      width: 100%;
       background: #f5f6f7;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       padding: 100px 10vw;
-      box-sizing: border-box;
-      color: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: start;
       font-family: "Cairo", sans-serif;
     }
 
-    .hero-content {
-      max-width: 850px;
-      text-align: start;
-    }
+    .hero-content { max-width: 850px; }
 
     .hero-content .kicker {
-      display: inline-block;
-      font-size: clamp(14px, 1.2vw, 16px);
-      font-weight: 700;
       color: #2e55f2;
       text-transform: uppercase;
       letter-spacing: 0.05em;
+      font-weight: 700;
+      font-size: 15px;
       margin-bottom: 18px;
+      display: inline-block;
     }
 
     .hero-content h1 {
       font-size: clamp(36px, 5.8vw, 78px);
       font-weight: 800;
       line-height: 1.1;
-      color: #111;
       margin-bottom: 22px;
     }
 
@@ -277,125 +208,149 @@
       max-width: 700px;
     }
 
-    @media (max-width: 640px) {
-      .hero-full {
-        padding: 80px 6vw;
-        text-align: center;
-      }
-      .hero-content {
-        max-width: 100%;
-      }
-    }
-
-    /* ==========================
-       القسم الرابع (فوائد)
-    ========================== */
+    /* ---------------------- القسم الثالث ---------------------- */
     .features-section {
-      background-color: #0e0e0e;
+      background: #0e0e0e;
       color: #fff;
       text-align: center;
-      padding: 60px 20px 80px;
-      position: relative;
-      overflow: hidden;
-      font-family: "Tajawal", sans-serif;
+      padding: 80px 20px;
     }
 
-    .features-section .section-subtitle {
+    .section-subtitle {
       color: #8c8cff;
       font-size: 16px;
-      margin-bottom: 10px;
       font-weight: 500;
+      margin-bottom: 10px;
     }
 
-    .features-section .section-title {
+    .section-title {
       font-size: 30px;
       font-weight: 700;
       margin-bottom: 40px;
-      line-height: 1.4;
     }
 
-    .features-section .images-wrapper {
+    .images-wrapper {
       position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-
-    .features-section .grid-bg {
-      position: absolute;
-      width: 250px;
-      height: 250px;
-      background-image: linear-gradient(#333 1px, transparent 1px),
-                        linear-gradient(90deg, #333 1px, transparent 1px);
-      background-size: 40px 40px;
-      opacity: 0.4;
-      z-index: 1;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .features-section .feature-image {
-      width: 85%;
-      max-width: 800px;
-      border-radius: 16px;
-      z-index: 2;
-      position: relative;
-      display: block;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
       margin-bottom: 40px;
     }
 
-    .features-section .text-content {
-      text-align: right;
+    .grid-bg {
+      position: absolute;
+      width: 250px; height: 250px;
+      background-image:
+        linear-gradient(#333 1px, transparent 1px),
+        linear-gradient(90deg, #333 1px, transparent 1px);
+      background-size: 40px 40px;
+      opacity: 0.4; z-index: 1;
+      transform: translate(-50%, -50%);
+      top: 50%; left: 50%;
+    }
+
+    .feature-image {
+      width: 85%;
       max-width: 800px;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+      position: relative; z-index: 2;
+    }
+
+    .text-content {
+      max-width: 800px; margin: 0 auto; text-align: right;
+    }
+
+    .text-content h2 { font-size: 32px; margin-bottom: 18px; }
+
+    .text-content p { font-size: 18px; color: #ddd; line-height: 1.9; }
+
+    /* ---------------------- القسم الرابع الجديد ---------------------- */
+    .designs-section {
+      background: #fff;
+      color: #000;
+      text-align: center;
+      padding: 90px 20px;
+    }
+
+    .designs-section h2 {
+      font-size: 36px;
+      font-weight: 800;
+      margin-bottom: 16px;
+      line-height: 1.3;
+    }
+
+    .designs-section p {
+      max-width: 680px;
+      margin: 0 auto 40px;
+      font-size: 17px;
+      color: #555;
+      line-height: 1.7;
+    }
+
+    .designs-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 14px 30px;
+      max-width: 700px;
       margin: 0 auto;
-      line-height: 1.9;
     }
 
-    .features-section .text-content h2 {
-      font-size: 32px;
-      font-weight: 700;
-      margin-bottom: 20px;
+    .designs-grid a {
+      color: #3b5bff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 17px;
+      transition: color 0.25s;
     }
 
-    .features-section .text-content p {
-      font-size: 18px;
-      color: #ddd;
-      font-weight: 400;
+    .designs-grid a:hover { color: #1f35cc; }
+
+    /* ---------------------- ميديا ---------------------- */
+    @media (max-width: 640px) {
+      nav { flex-wrap: wrap; justify-content: center; }
+      .hero-normal { padding: 100px 20px 70px; }
+      .hero-full { text-align: center; padding: 80px 6vw; }
+      .text-content { text-align: center; }
+      .designs-section h2 { font-size: 28px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- ✅ الهيدر -->
+  <!-- ✅ Header -->
   <header>
     <div class="header-inner">
       <button class="hamburger" aria-label="menu">
-        <svg viewBox="0 0 24 24"><path d="M4 7h16M4 12h16M4 17h16" stroke-linecap="round"/></svg>
+        <svg viewBox="0 0 24 24">
+          <path d="M4 7h16M4 12h16M4 17h16" stroke-linecap="round"/>
+        </svg>
       </button>
-      <a href="#" class="logo"><img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo"></a>
+      <a href="#" class="logo">
+        <img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo">
+      </a>
       <button class="cta" onclick="window.location.href='Connectez-vous/'">Connectez-vous</button>
     </div>
+
     <nav>
-      <span>Logos</span><span>Cartes de visite</span><span>Sites Web</span><span>Ads</span>
+      <span>Logos</span>
+      <span>Cartes de visite</span>
+      <span>Sites Web</span>
+      <span>Ads</span>
     </nav>
   </header>
 
-  <!-- ✅ القسم الثاني -->
+  <!-- ✅ القسم 1 -->
   <section class="hero-normal">
     <div class="content">
       <h1>Créateur de<br>site Web</h1>
       <p>Créez un magnifique site Web en quelques secondes</p>
-
       <div class="input-wrapper">
         <input type="text" id="entrepriseInput" placeholder="Saisir le nom de votre entreprise">
       </div>
-
       <button id="startBtn">Commencer Maintenant</button>
-
       <div class="upload" id="uploadLogo">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <svg viewBox="0 0 24 24">
           <path d="M12 16V8m0 0l-4 4m4-4l4 4M4 20h16" />
         </svg>
         Téléchargez Votre Logo
@@ -403,7 +358,7 @@
     </div>
   </section>
 
-  <!-- القسم الثالث -->
+  <!-- ✅ القسم 2 -->
   <section class="hero-full">
     <div class="hero-content">
       <span class="kicker">نَمَاذِجُ التَّصْمِيم</span>
@@ -415,56 +370,79 @@
     </div>
   </section>
 
-  <!-- القسم الرابع -->
+  <!-- ✅ القسم 3 -->
   <section class="features-section" dir="rtl">
-    <div class="container">
-      <h5 class="section-subtitle">فوائد</h5>
-      <h2 class="section-title">أكثر بكثير من مجرد منشئ موقع ويب</h2>
-      <div class="images-wrapper">
-        <div class="grid-bg"></div>
-        <img src="https://i.postimg.cc/FK87HV5C/features-website-builder-2x-fr-fr-1.webp" alt="مميزات منشئ المواقع" class="feature-image">
-      </div>
-      <div class="text-content">
-        <h2>أخبر قصتك بموقع ويب مخصص</h2>
-        <p>
-          عزّز هوية علامتك التجارية بتصميم موقع إلكتروني مُخصّص.
-          يساعدك الموقع الإلكتروني عالي الجودة على بناء الوعي بعلامتك التجارية وتوسيع شبكة معارفك.
-          لا تقتصر على معلومات واقعية مثل اسمك أو بيانات الاتصال؛ بل عبّر عن قصتك من خلال إنشاء موقع إلكتروني مؤثر باستخدام منشئ مواقع الويب من Design.com.
-        </p>
-      </div>
+    <h5 class="section-subtitle">فوائد</h5>
+    <h2 class="section-title">أكثر بكثير من مجرد منشئ موقع ويب</h2>
+    <div class="images-wrapper">
+      <div class="grid-bg"></div>
+      <img src="https://i.postimg.cc/FK87HV5C/features-website-builder-2x-fr-fr-1.webp" alt="مميزات منشئ المواقع" class="feature-image">
+    </div>
+    <div class="text-content">
+      <h2>أخبر قصتك بموقع ويب مخصص</h2>
+      <p>
+        عزّز هوية علامتك التجارية بتصميم موقع إلكتروني مُخصّص.
+        باستخدام منشئ مواقع الويب من webchat.com
+      </p>
     </div>
   </section>
 
+  <!-- ✅ القسم 4 الجديد -->
+  <section class="designs-section">
+    <h2>Designs de sites Web pour tous les secteurs d'activité</h2>
+    <p>
+      Design.com propose des designs de sites Web adaptés à tous les secteurs d'activité.
+      Il vous suffit de choisir un secteur ou un mot-clé ci-dessous.
+    </p>
+
+    <div class="designs-grid">
+      <a href="#">Agence</a>
+      <a href="#">Beauté</a>
+      <a href="#">Comptabilité</a>
+      <a href="#">Corporatif</a>
+      <a href="#">Démarrage</a>
+      <a href="#">Entretien</a>
+      <a href="#">Facile</a>
+      <a href="#">Générique</a>
+      <a href="#">Lancement</a>
+      <a href="#">Mode</a>
+      <a href="#">Promo</a>
+      <a href="#">Rénovation</a>
+      <a href="#">Réparation</a>
+      <a href="#">Restaurant</a>
+      <a href="#">Santé</a>
+      <a href="#">Service</a>
+      <a href="#">Sports</a>
+      <a href="#">Vente</a>
+    </div>
+  </section>
+
+  <!-- ✅ JS -->
   <script>
-    const startBtn = document.getElementById('startBtn');
-    const entrepriseInput = document.getElementById('entrepriseInput');
-    const uploadLogo = document.getElementById('uploadLogo');
+    const startBtn = document.getElementById("startBtn");
+    const entrepriseInput = document.getElementById("entrepriseInput");
+    const uploadLogo = document.getElementById("uploadLogo");
 
-    // ✅ زر Commencer Maintenant
-    startBtn.addEventListener('click', () => {
-      const name = entrepriseInput.value.trim();
-
-      if (name === "") {
-        entrepriseInput.focus();
-        entrepriseInput.style.animation = "shake 0.3s";
-        setTimeout(() => (entrepriseInput.style.animation = ""), 300);
-      } else {
-        localStorage.setItem('entrepriseName', name);
-        document.body.style.transition = "opacity 0.5s ease";
-        document.body.style.opacity = "0";
-        setTimeout(() => {
-          window.location.href = "Connectez-vous/";
-        }, 500);
-      }
-    });
-
-    // ✅ الزر Téléchargez Votre Logo
-    uploadLogo.addEventListener('click', () => {
+    const fadeOut = (callback) => {
       document.body.style.transition = "opacity 0.5s ease";
       document.body.style.opacity = "0";
-      setTimeout(() => {
-        window.location.href = "Connectez-vous/";
-      }, 500);
+      setTimeout(callback, 500);
+    };
+
+    startBtn.addEventListener("click", () => {
+      const name = entrepriseInput.value.trim();
+      if (!name) {
+        entrepriseInput.style.animation = "shake 0.3s";
+        setTimeout(() => (entrepriseInput.style.animation = ""), 300);
+        entrepriseInput.focus();
+        return;
+      }
+      localStorage.setItem("entrepriseName", name);
+      fadeOut(() => (window.location.href = "Connectez-vous/"));
+    });
+
+    uploadLogo.addEventListener("click", () => {
+      fadeOut(() => (window.location.href = "Connectez-vous/"));
     });
   </script>
 </body>
